refactor(gateway): 改造 Gateway 使用 HTTP 接口替代直接数据库访问
## 主要变更

### Gateway 改造
- ContractGateway: 通过 HTTP 接口查询合同表
- ContractNodeGateway: 通过 HTTP 接口查询合同节点
- ContractFieldGateway: 通过 HTTP 接口查询扩展字段（分表路由由服务端处理）
- ContractConfigGateway: 4 步查询链路改造
- ContractUserGateway: 签约人查询 + 手机号解密 + ucid 查询
- ContractQuotationRelationGateway: 签约单据查询
- PersonalQuoteGateway: 个性化报价查询

### 环境配置优化
- EnvironmentConfig: 支持 baseUrl 配置，新增生产环境
- 支持多服务域名 (sales-project, order-service)
- URL 模板使用 ${baseUrl} 和 ${baseUrl:serviceName} 占位符

### 接口配置
- 新增 sre-data-endpoints.yml: 7 个数据查询接口
- 更新 contract-endpoints.yml: 使用新的 URL 模板

### 代码质量
- 重构变量命名 (json1 -> contractJson 等)
- 修复 Map.of() 类型转换问题

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>